--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
-site.title: Natasha Fernandes
-site.description: Postdoctoral Researcher
+title: Natasha Fernandes
+description: Postdoctoral Researcher
