--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title: Natasha Fernandes
-description: Postdoctoral Researcher
+description: Lecturer in Cyber Security
