--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 title: Dr Natasha Fernandes
-description: Lecturer in Cyber Security
+description: Senior Lecturer in Cyber Security
